--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -80,6 +80,30 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   padding: 6px;
   border-radius: 50%; }
 
+.section--category {
+  color: #ed8575;
+  font-size: 16px;
+  line-height: 32px;
+  font-weight: 400;
+  margin-bottom: 15px;
+  display: inline-block; }
+
+.section--heading {
+  color: #391400;
+  font-size: 45px;
+  font-weight: 800;
+  letter-spacing: -1px;
+  text-align: left;
+  margin-bottom: 18px;
+  padding-right: 15%; }
+
+.section--paragraph {
+  color: #391400 !important;
+  font-weight: 400 !important;
+  font-size: 14.5px !important;
+  line-height: 32px !important;
+  margin-bottom: 30px !important; }
+
 .container {
   width: 81.25%;
   margin: 0 auto; }
@@ -304,7 +328,7 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   #experience-design-agency .logos {
     display: flex;
     justify-content: space-between;
-    padding: 4rem 0; }
+    padding: 6% 0; }
     #experience-design-agency .logos img {
       object-fit: contain;
       width: 10%; }
@@ -321,36 +345,23 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
       margin-bottom: 130px; }
       #experience-design-agency #about .upper img {
         width: 50%; }
+        @media (max-width: 992px) {
+          #experience-design-agency #about .upper img {
+            width: 100%; } }
       #experience-design-agency #about .upper .text {
         width: 50%;
         padding-left: 7rem;
         padding-top: 4rem; }
-        #experience-design-agency #about .upper .text span {
-          color: #ed8575;
-          font-size: 16px;
-          line-height: 32px;
-          font-weight: 400;
-          margin-bottom: 15px;
-          display: inline-block; }
-        #experience-design-agency #about .upper .text h2 {
-          color: #391400;
-          font-size: 45px;
-          font-weight: 800;
-          letter-spacing: -1px;
-          text-align: left;
-          margin-bottom: 18px; }
+        @media (max-width: 992px) {
+          #experience-design-agency #about .upper .text {
+            padding: 2% 0 0 0;
+            width: 100%; } }
         #experience-design-agency #about .upper .text h6 {
           color: #391400;
           font-weight: 400;
           font-size: 20px;
           line-height: 32px;
           margin-bottom: 18px; }
-        #experience-design-agency #about .upper .text p {
-          color: #391400;
-          font-weight: 400;
-          font-size: 14.5px;
-          line-height: 32px;
-          margin-bottom: 30px; }
     #experience-design-agency #about .lower .box {
       border: 1px solid #F3D1BF;
       padding: 2.5rem; }
@@ -422,36 +433,28 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
 
 #give-new-look {
   background-color: #FDF0E9; }
+  #give-new-look img {
+    object-fit: contain;
+    width: 50%; }
+    @media (max-width: 992px) {
+      #give-new-look img {
+        width: 100%;
+        order: 1; } }
   #give-new-look .text {
     padding-top: 4rem;
-    padding-right: 30%; }
-    #give-new-look .text span {
-      color: #ed8575;
-      font-size: 16px;
-      line-height: 32px;
-      font-weight: 400;
-      margin-bottom: 15px;
-      display: inline-block; }
-    #give-new-look .text h2 {
-      color: #391400;
-      font-size: 45px;
-      font-weight: 800;
-      letter-spacing: -1px;
-      text-align: left;
-      margin-bottom: 18px;
-      padding-right: 15%; }
+    padding-right: 15%;
+    width: 50%; }
+    @media (max-width: 992px) {
+      #give-new-look .text {
+        padding: 2% 0 0 0;
+        width: 100%;
+        order: 2; } }
     #give-new-look .text h6 {
       color: #391400;
       font-weight: 400;
       font-size: 20px;
       line-height: 32px;
       margin-bottom: 18px; }
-    #give-new-look .text p {
-      color: #391400;
-      font-weight: 400;
-      font-size: 14.5px;
-      line-height: 32px;
-      margin-bottom: 30px; }
     #give-new-look .text ul li {
       margin-bottom: 4%;
       font-weight: 400;
