--- a/assets/style/scss/main.scss
+++ b/assets/style/scss/main.scss
@@ -1,5 +1,5 @@
 @import "./base/reset", "./base/typography", "./abstracts/color",
-  "./abstracts/mixins", "./components/buttons", "./components/icons","./layout/grid",
+  "./abstracts/mixins", "./components/buttons", "./components/icons", './components/section-content',"./layout/grid",
   "./layout/navbar", "./layout/footer", "./pages/home/index",
   "./pages/shop/shop";
 
