--- a/views/home.html
+++ b/views/home.html
@@ -147,12 +147,12 @@
           <hr />
           <div id="about">
             <div class="upper">
-                <img src="../assets/media/experience-design-agency.png" alt="" />
+              <img src="../assets/media/experience-design-agency.png" alt="" />
               <div class="text">
-                <span>About</span>
-                <h2>An Experience Design Agency</h2>
+                <span class="section--category">About</span>
+                <h2 class="section--heading">An Experience Design Agency</h2>
                 <h6>Provides a full service range</h6>
-                <p>
+                <p class="section--paragraph">
                   Ability to put themselves in the merchant's shoes. It is meant
                   to partner on the long run, and work as an extension of the
                   merchant's team.
@@ -252,11 +252,10 @@
       <section id="give-new-look">
         <div class="container">
           <div class="row">
-            <div class="col-6">
                 <div class="text">
-                  <span>Features</span>
-                  <h2>Give Your Site A New Look</h2>
-                  <p>
+                  <span class="section--category">Features</span>
+                  <h2 class="section--heading">Give Your Site A New Look</h2>
+                  <p class="section--paragraph">
                     Service range including technical skills, design, business understanding.
                   </p>
                   <ul>
@@ -265,8 +264,6 @@
                     <li><i class="fa-solid fa-check icon--primary"></i> Range including technical skills</li>
                   </ul>
                 </div>
-            </div>
-            <div class="col-6">
               <img src="../assets/media/newLook.png" alt="">
             </div>
           </div>
