--- a/assets/style/scss/pages/home/sections/_give-new-look.scss
+++ b/assets/style/scss/pages/home/sections/_give-new-look.scss
@@ -1,25 +1,22 @@
 #give-new-look {
   background-color: $section-bgc;
-
+  
+  img{
+    object-fit: contain;
+    width: 50%;
+    @include for-tablet-landscape-up{
+      width: 100%;
+      order: 1;
+    }
+  }
   .text {
     padding-top: 4rem;
-    padding-right: 30%;
-    span {
-      color: $orange;
-      font-size: 16px;
-      line-height: 32px;
-      font-weight: 400;
-      margin-bottom: 15px;
-      display: inline-block;
-    }
-    h2 {
-      color: $text-dark;
-      font-size: 45px;
-      font-weight: 800;
-      letter-spacing: -1px;
-      text-align: left;
-      margin-bottom: 18px;
-      padding-right: 15%;
+    padding-right: 15%;
+    width: 50%;
+    @include for-tablet-landscape-up{
+      padding: 2% 0 0 0;
+      width: 100%;
+      order: 2;
     }
     h6 {
       color: $text-dark;
@@ -27,13 +24,6 @@
       font-size: 20px;
       line-height: 32px;
       margin-bottom: 18px;
-    }
-    p {
-      color: $text-dark-grey;
-      font-weight: 400;
-      font-size: 14.5px;
-      line-height: 32px;
-      margin-bottom: 30px;
     }
     ul {
       li {
