--- a/views/home.html
+++ b/views/home.html
@@ -57,18 +57,18 @@
       </div>
     </header>
     <header class="app__header app__header__mobile">
-        <div class="container">
-            <div class="row">
-                <div class="col-6">
-                    <img src="../assets/images/logo.png" alt="">
-                </div>
-                <div class="col-6">
-                    <div class="burger">
-                        <i class="fa-solid fa-bars"></i>
-                    </div>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <img src="../assets/images/logo.png" alt="" />
+          </div>
+          <div class="col-6">
+            <div class="burger">
+              <i class="fa-solid fa-bars"></i>
             </div>
+          </div>
         </div>
+      </div>
     </header>
     <main class="app__main">
       <section class="app__main__hero">
@@ -246,6 +246,150 @@
               </div>
             </div>
             <hr class="hr" />
+          </div>
+        </div>
+      </section>
+      <section class="app__main__portfolio">
+        <div class="container">
+          <div class="row">
+            <div class="col-12">
+              <div class="app__main__portfolio__subtitle">
+                <p class="app__main__portfolio__subtitle__item">PORTFOLIO</p>
+              </div>
+              <div class="app__main__portfolio__title">
+                <div class="app__main__portfolio__title__item">LATEST WORK</div>
+              </div>
+              <div class="app__main__portfolio__links">
+                <ul class="app__main__portfolio__links__items">
+                  <li class="app__main__portfolio__links__items__item active">
+                    <a href="#">Show All</a>
+                    <span>14</span>
+                  </li>
+                  <li class="app__main__portfolio__links__items__item">
+                    <a href="#">Design</a>
+                    <span>14</span>
+                  </li>
+                  <li class="app__main__portfolio__links__items__item">
+                    <a href="#">Branding</a>
+                    <span>14</span>
+                  </li>
+                  <li class="app__main__portfolio__links__items__item">
+                    <a href="#">Illustration</a>
+                    <span>14</span>
+                  </li>
+                  <li class="app__main__portfolio__links__items__item">
+                    <a href="#">Motion</a>
+                    <span>14</span>
+                  </li>
+                </ul>
+              </div>
+              <div class="app__main__portfolio__items">
+                <div class="row">
+                  <div class="col-4 col-md-12">
+                    <div class="app__main__portfolio__items__item">
+                      <img src="../assets/images/img1.png" alt="" />
+                      <div class="app__main__portfolio__items__item__content">
+                        <div
+                          class="app__main__portfolio__items__item__content__category"
+                        >
+                          <p
+                            class="app__main__portfolio__items__item__content__category__item"
+                          >
+                            Design
+                          </p>
+                        </div>
+                        <div
+                          class="app__main__portfolio__items__item__content__name"
+                        >
+                          <p
+                            class="app__main__portfolio__items__item__content__name__item"
+                          >
+                            Sofa
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-8 col-md-12">
+                    <div class="app__main__portfolio__items__item">
+                      <img src="../assets/images/img3.png" alt="" />
+                      <div class="app__main__portfolio__items__item__content">
+                        <div
+                          class="app__main__portfolio__items__item__content__category"
+                        >
+                          <p
+                            class="app__main__portfolio__items__item__content__category__item"
+                          >
+                            Branding
+                          </p>
+                        </div>
+                        <div
+                          class="app__main__portfolio__items__item__content__name"
+                        >
+                          <p
+                            class="app__main__portfolio__items__item__content__name__item"
+                          >
+                            KeyBoard
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-8 col-md-12">
+                    <div class="app__main__portfolio__items__item">
+                      <div class="app__main__portfolio__items__item__image">
+                        <img src="../assets/images/img4.png" alt="" />
+                      </div>
+                      <div class="app__main__portfolio__items__item__content">
+                        <div
+                          class="app__main__portfolio__items__item__content__category"
+                        >
+                          <p
+                            class="app__main__portfolio__items__item__content__category__item"
+                          >
+                            Illustration
+                          </p>
+                        </div>
+                        <div
+                          class="app__main__portfolio__items__item__content__name"
+                        >
+                          <p
+                            class="app__main__portfolio__items__item__content__name__item"
+                          >
+                            Work Media
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-4 col-md-12">
+                    <div class="app__main__portfolio__items__item">
+                      <img src="../assets/images/img5.png" alt="" />
+                      <div class="app__main__portfolio__items__item__content">
+                        <div
+                          class="app__main__portfolio__items__item__content__category"
+                        >
+                          <p
+                            class="app__main__portfolio__items__item__content__category__item"
+                          >
+                            Motion
+                          </p>
+                        </div>
+                        <div
+                          class="app__main__portfolio__items__item__content__name"
+                        >
+                          <p
+                            class="app__main__portfolio__items__item__content__name__item"
+                          >
+                            DDDone
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </section>
