video reel section html

--- a/views/home.html
+++ b/views/home.html
@@ -221,7 +221,27 @@
                 </div>
             </div>
         </section>
-        
+        <section id="app__main__videoreel">
+          <div class="container">
+            <div class="row videoreel__row">
+              <div class="col-6 col-md-12">
+                <div class="app__main__videoreel__imagewrapper">
+                  <div class="image-overlay"></div>
+                  <img src="../assets/media/videoreelsec.png" alt="video-reel">
+                  <i class="fa-solid fa-play play__btn"></i>
+                  <div class="videoreel--time"><span>1:45</span></div>
+                </div>
+              </div>
+              <div class="col-6 col-md-12 videoreel--content__wrapper">
+                <article class="videoreel--content">
+                  <h5>VIDEO REEL</h5>
+                  <h3>Unlock The Greatest Value Possible</h3>
+                  <p>Design, business understanding, ability to put themselves in the merchant's shoes meant to partner.</p>
+                </article>
+              </div>
+            </div>
+          </div>
+        </section>
     </main>
     <footer class="footer">
         <div class="container">
