--- a/assets/style/scss/pages/home/sections/_give-new-look.scss
+++ b/assets/style/scss/pages/home/sections/_give-new-look.scss
@@ -1,10 +1,9 @@
 #give-new-look {
   background-color: $section-bgc;
-  
-  img{
+  img {
     object-fit: contain;
     width: 50%;
-    @include for-tablet-landscape-up{
+    @include for-tablet-landscape-up {
       width: 100%;
       order: 1;
     }
@@ -13,7 +12,7 @@
     padding-top: 4rem;
     padding-right: 15%;
     width: 50%;
-    @include for-tablet-landscape-up{
+    @include for-tablet-landscape-up {
       padding: 2% 0 0 0;
       width: 100%;
       order: 2;
@@ -31,10 +30,57 @@
         font-weight: 400;
         font-size: 16px;
         line-height: 32px;
-        color: rgba(57, 20, 0, 0.64);;
+        color: rgba(57, 20, 0, 0.64);
         i {
           margin-right: 2%;
         }
+      }
+    }
+  }
+  .lower {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    .text {
+      width: 50%;
+      padding-right: 20%;
+      a {
+        text-decoration: none;
+        color: $text-dark;
+        font-size: 13px;
+      }
+    }
+    .boxes {
+      width: 50%;
+      display: flex;
+      .box {
+        box-sizing: content-box;
+        border: 1px solid $hr-bgc;
+        padding: 100% 7% 1% 7%;
+        width: 50%;
+        h6 {
+          color: $text-dark;
+          font-weight: 700;
+          font-size: 20px;
+          margin-bottom: 5%;
+        }
+        p {
+          font-weight: 400;
+          font-size: 10px;
+          line-height: 10px;
+          color: rgba(57, 20, 0, 0.64);
+        }
+      }
+      .box-white{
+        background-color: white;
+        padding: 7% 7% 14% 7%;
+        i {
+          margin-bottom: 10%;
+        }
+      }
+      .box-transparent{
+        padding-top: 10%;
+        margin-top: 10%;
       }
     }
   }
