--- a/views/home.html
+++ b/views/home.html
@@ -259,18 +259,38 @@
                     Service range including technical skills, design, business understanding.
                   </p>
                   <ul>
-                    <li><i class="fa-solid fa-check icon--primary"></i> Range including technical skills</li>
-                    <li><i class="fa-solid fa-check icon--primary"></i> Range including technical skills</li>
-                    <li><i class="fa-solid fa-check icon--primary"></i> Range including technical skills</li>
+                    <li><i class="fa-solid fa-check icon--small"></i> Range including technical skills</li>
+                    <li><i class="fa-solid fa-check icon--small"></i> Range including technical skills</li>
+                    <li><i class="fa-solid fa-check icon--small"></i> Range including technical skills</li>
                   </ul>
                 </div>
               <img src="../assets/media/newLook.png" alt="">
             </div>
+            <div class="row">
+              <div class="lower">
+                <div class="text">
+                  <span class="section--category">Features</span>
+                  <p class="section--paragraph">Long run, and work as an extension of the merchant's team.</p>
+                  <a href="#">Read More</a>
+                </div>
+                <div class="boxes">
+                  <div class="box box-white">
+                    <i class="fa-solid fa-ruler-combined icon--large"></i>
+                    <h6>Professional</h6>
+                    <p>Full service range including technical skills, design.</p>
+                  </div>
+                  <div class="box box-transparent">
+                    <h6>Accessibility</h6>
+                    <p>Business understanding, ability to put themselves.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
-
         </div>
 
       </section>
+
     </main>
     <footer class="footer">
       <div class="container">
