--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -73,11 +73,18 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
   border-radius: 6px;
   padding: 1rem 1.5rem; }
 
-.icon--primary {
+.icon--small {
   background-color: #EF6D58;
   font-size: 15px;
   color: white;
   padding: 6px;
+  border-radius: 50%; }
+
+.icon--large {
+  background-color: #EF6D58;
+  font-size: 20px;
+  color: white;
+  padding: 12px;
   border-radius: 50%; }
 
 .section--category {
@@ -463,3 +470,40 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
       color: rgba(57, 20, 0, 0.64); }
       #give-new-look .text ul li i {
         margin-right: 2%; }
+  #give-new-look .lower {
+    width: 100%;
+    display: flex;
+    align-items: center; }
+    #give-new-look .lower .text {
+      width: 50%;
+      padding-right: 20%; }
+      #give-new-look .lower .text a {
+        text-decoration: none;
+        color: #391400;
+        font-size: 13px; }
+    #give-new-look .lower .boxes {
+      width: 50%;
+      display: flex; }
+      #give-new-look .lower .boxes .box {
+        box-sizing: content-box;
+        border: 1px solid #F3D1BF;
+        padding: 100% 7% 1% 7%;
+        width: 50%; }
+        #give-new-look .lower .boxes .box h6 {
+          color: #391400;
+          font-weight: 700;
+          font-size: 20px;
+          margin-bottom: 5%; }
+        #give-new-look .lower .boxes .box p {
+          font-weight: 400;
+          font-size: 10px;
+          line-height: 10px;
+          color: rgba(57, 20, 0, 0.64); }
+      #give-new-look .lower .boxes .box-white {
+        background-color: white;
+        padding: 7% 7% 14% 7%; }
+        #give-new-look .lower .boxes .box-white i {
+          margin-bottom: 10%; }
+      #give-new-look .lower .boxes .box-transparent {
+        padding-top: 10%;
+        margin-top: 10%; }
