--- a/views/home.html
+++ b/views/home.html
@@ -389,6 +389,42 @@
                   </div>
                 </div>
               </div>
+              <div class="app__main__portfolio__btn">
+                <button>Exploore More</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="app__main__banner">
+        <div class="container">
+          <div class="app__main__banner__content">
+            <div class="row">
+              <div class="col-4 app__main__banner__content__block">
+                <div class="app__main__banner__content__block__inner">
+                  <div class="app__main__banner__content__block__inner__subtitle">
+                    <p
+                      class="app__main__banner__content__block__inner__subtitle__item"
+                    >
+                      GET STARTED
+                    </p>
+                  </div>
+                  <div class="app__main__banner__content__block__inner__title">
+                    <h3 class="app__main__banner__content__block__inner__title__item">
+                      We Help Companies Move Faster
+                    </h3>
+                  </div>
+                  <div class="app__main__banner__content__block__inner__button">
+                    <button>Contact Us</button>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4 app__main__banner__content__block">
+                <img src="../assets/images/img7.png" alt="" />
+              </div>
+              <div class="col-4 app__main__banner__content__block">
+                <img src="../assets/images/img8.png" alt="" />
+              </div>
             </div>
           </div>
         </div>
