--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -423,7 +423,6 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
 
 .app__main__portfolio {
   background-color: #32334c;
-  border: solid;
   font-family: "Epilogue";
   width: 100%;
   text-align: center; }
@@ -490,3 +489,62 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
         /* identical to box height, or 120% */
         /* Text_Light */
         color: #ffffff; }
+  .app__main__portfolio__btn {
+    padding-bottom: 20px; }
+    .app__main__portfolio__btn button {
+      padding: 18px 31px;
+      background-color: transparent;
+      color: white;
+      font-weight: 700;
+      border: 1px solid rgba(255, 255, 255, 0.295743);
+      border-radius: 6px; }
+
+.app__main__banner {
+  background-color: #32334c;
+  padding-bottom: 20px; }
+  .app__main__banner__content {
+    border-radius: 6px;
+    background: #fdf0e9; }
+    .app__main__banner__content__block {
+      display: flex;
+      padding: 20px; }
+      .app__main__banner__content__block__inner {
+        padding: 100px 20px 100px 50px; }
+        .app__main__banner__content__block__inner__subtitle {
+          margin-bottom: 13px; }
+          .app__main__banner__content__block__inner__subtitle__item {
+            font-family: "Epilogue";
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 32px;
+            /* identical to box height, or 200% */
+            letter-spacing: 3px;
+            text-transform: uppercase;
+            /* Text_Dark_Accent */
+            color: #ef6d58; }
+        .app__main__banner__content__block__inner__title {
+          margin-bottom: 13px; }
+          .app__main__banner__content__block__inner__title__item {
+            font-family: "Epilogue";
+            font-weight: 700;
+            font-size: 26px;
+            line-height: 32px;
+            letter-spacing: 3px;
+            text-transform: uppercase;
+            color: #391400; }
+        .app__main__banner__content__block__inner__button button {
+          font-family: "Epilogue";
+          font-style: normal;
+          font-weight: 900;
+          font-size: 14px;
+          line-height: 14px;
+          text-align: center;
+          text-transform: uppercase;
+          background: #ef6d58;
+          border-radius: 6px;
+          padding: 18px 31px;
+          border: none;
+          color: #ffffff; }
+      .app__main__banner__content__block img {
+        align-self: center;
+        justify-self: flex-end; }
