--- a/assets/style/scss/pages/home/_index.scss
+++ b/assets/style/scss/pages/home/_index.scss
@@ -1,7 +1,7 @@
 @import "./sections/hero", "./sections/experience-design-agency";
 @import "./sections/features";
 @import "./sections/portfolio";
-@import "./sections/banner"
+@import "./sections/banner";
 @import './sections/experience-design-agency';
 @import './sections/features';
 @import './sections/videoreel';
