--- a/assets/style/scss/pages/home/_index.scss
+++ b/assets/style/scss/pages/home/_index.scss
@@ -1,4 +1,5 @@
-@import './sections/hero', './sections/experience-design-agency';
+@import './sections/hero';
+@import './sections/experience-design-agency';
 @import './sections/give-new-look';
 @import './sections/features';
 @import './sections/videoreel';
