--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -427,6 +427,9 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
     #give-new-look .lower .text {
       width: 50%;
       padding-right: 20%; }
+      @media (max-width: 992px) {
+        #give-new-look .lower .text {
+          width: 100%; } }
       #give-new-look .lower .text a {
         text-decoration: none;
         color: #391400;
@@ -434,10 +437,12 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
     #give-new-look .lower .boxes {
       width: 50%;
       display: flex; }
+      @media (max-width: 992px) {
+        #give-new-look .lower .boxes {
+          width: 100%; } }
       #give-new-look .lower .boxes .box {
-        box-sizing: content-box;
         border: 1px solid #F3D1BF;
-        padding: 100% 7% 1% 7%;
+        padding: 10% 5% 5% 7%;
         width: 50%; }
         #give-new-look .lower .boxes .box h6 {
           color: #391400;
@@ -446,16 +451,14 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
           margin-bottom: 5%; }
         #give-new-look .lower .boxes .box p {
           font-weight: 400;
-          font-size: 10px;
-          line-height: 10px;
+          font-size: 15px;
+          line-height: 32px;
           color: rgba(57, 20, 0, 0.64); }
       #give-new-look .lower .boxes .box-white {
-        background-color: white;
-        padding: 7% 7% 14% 7%; }
+        background-color: white; }
         #give-new-look .lower .boxes .box-white i {
           margin-bottom: 10%; }
       #give-new-look .lower .boxes .box-transparent {
-        padding-top: 10%;
         margin-top: 10%; }
 
 .hr {
