--- a/views/home.html
+++ b/views/home.html
@@ -170,7 +170,7 @@
     <section class="app__main__features">
       <div class="container">
         <div class="row">
-          <div class="col-6" style="padding: 40px">
+          <div class="col-6 col-md-12" style="padding: 40px">
             <div class="app__main__features__subtitle">
               <div class="app__main__features__subtitle__item">
                 How We Work
@@ -193,7 +193,7 @@
               </button>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-6 col-md-12">
             <div class="app__main__features__items">
               <div class="app__main__features__items__item">
                 <div class="app__main__features__items__item__count">
@@ -381,7 +381,7 @@
         <div class="container">
           <div class="app__main__banner__content">
             <div class="row">
-              <div class="col-4 app__main__banner__content__block">
+              <div class="col-4 col-md-12 app__main__banner__content__block">
                 <div class="app__main__banner__content__block__inner">
                   <div class="app__main__banner__content__block__inner__subtitle">
                     <p
@@ -400,14 +400,18 @@
                   </div>
                 </div>
               </div>
-              <div class="col-4 app__main__banner__content__block">
+              <div class="col-4 col-md-12 app__main__banner__content__block">
                 <img src="../assets/images/img7.png" alt="" />
               </div>
-              <div class="col-4 app__main__banner__content__block">
+              <div class="col-4 col-md-12 app__main__banner__content__block">
                 <img src="../assets/images/img8.png" alt="" />
               </div>
             </div>
+            <div class="app__main__banner__content__icon">
+                <img src="../assets/images/icon.png" alt="">
+              </div>
           </div>
+          
         </div>
       </section>
     <section id="app__main__videoreel">
