banner section bugfix

--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -713,11 +713,11 @@ h1, h2, h3, h4, h5, h6, p, span, a, button {
     align-items: center;
     padding-top: 20px; }
   .app__main__banner__content__icon {
-    top: -85px; }
+    top: -50px; }
     .app__main__banner__content__icon img {
       width: 100px; }
   img {
-    width: 100%; }
+    width: 300px; }
   .app__main__banner__content__block {
     justify-content: center; } }
 
