--- a/assets/style/scss/pages/home/sections/_banner.scss
+++ b/assets/style/scss/pages/home/sections/_banner.scss
@@ -75,13 +75,13 @@
     padding-top: 20px;
   }
   .app__main__banner__content__icon{
-    top: -85px;
+    top: -50px;
     img{
       width: 100px;
     }
   }
   img{
-    width: 100%;
+    width: 300px;
   }
   .app__main__banner__content__block{
     justify-content: center;
